@@ -1,3 +1,9 @@
+2004-11-27  James Henstridge  <james@jamesh.id.au>
+
+	* Makefile.am: fix build rules for Nautilus stuff.
+
+	* fontilus-context-menu.c: convert to a Nautilus extension.
+
 2004-10-14  Jody Goldberg <jody@gnome.org>
 
 	* Release 2.8.1
