@@ -1,3 +1,8 @@
+2004-11-27  James Henstridge  <james@jamesh.id.au>
+
+	* configure.in (FONT_CONTEXT_MENU): use libnautilus-extension for
+	the context menu instead of Bonobo.
+
 2004-11-24  Christoffer Olsen  <co@deworks.net>
 	
 	* All the 20 *.desktop.in files that contain Bugzilla information
